Centered content and corrected css href name (css not showing on gitlab page).

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body {
     font-family: helvetica, arial, sans-serif;
     margin: 2em;
+    background-color: rgb(116, 85, 114);
+    text-align: center
   }
   
   h1 {
